@@ -32,6 +32,7 @@ Changes log
           into MetadataService.
         - Client preferences were not taken into account with annotated
           methods returning beans with multiple variants available.
+        - Added new Server(Protocol) constructor.
      - Enhancements
         - Added a new Jackson extension, with transparent conversion
           between JSON representations and objects.
